; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_disp.c_evo_kick.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/dispnv50/extr_disp.c_evo_kick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nv50_dmac = type { i32, i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evo_kick(i32* %0, %struct.nv50_dmac* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.nv50_dmac*, align 8
  %5 = alloca %struct.nv50_dmac*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.nv50_dmac* %1, %struct.nv50_dmac** %4, align 8
  %6 = load %struct.nv50_dmac*, %struct.nv50_dmac** %4, align 8
  store %struct.nv50_dmac* %6, %struct.nv50_dmac** %5, align 8
  %7 = load %struct.nv50_dmac*, %struct.nv50_dmac** %5, align 8
  %8 = call i32 @evo_flush(%struct.nv50_dmac* %7)
  %9 = load %struct.nv50_dmac*, %struct.nv50_dmac** %5, align 8
  %10 = getelementptr inbounds %struct.nv50_dmac, %struct.nv50_dmac* %9, i32 0, i32 2
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.nv50_dmac*, %struct.nv50_dmac** %5, align 8
  %14 = getelementptr inbounds %struct.nv50_dmac, %struct.nv50_dmac* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = ptrtoint i32* %12 to i64
  %17 = ptrtoint i32* %15 to i64
  %18 = sub i64 %16, %17
  %19 = sdiv exact i64 %18, 4
  %20 = shl i64 %19, 2
  %21 = trunc i64 %20 to i32
  %22 = call i32 @nvif_wr32(i32* %11, i32 0, i32 %21)
  %23 = load %struct.nv50_dmac*, %struct.nv50_dmac** %5, align 8
  %24 = getelementptr inbounds %struct.nv50_dmac, %struct.nv50_dmac* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  ret void
}

declare dso_local i32 @evo_flush(%struct.nv50_dmac*) #1

declare dso_local i32 @nvif_wr32(i32*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
